# Qsimus

./: CMakeLists.txt  Qsimus.pro  README.md  main.cpp  qsimus.cpp  qsimus.h
